[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/MainMenu.png" type="Texture" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 155, 33 )

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="MainMenu" type="Sprite" parent="."]
position = Vector2( 427.058, 240.525 )
scale = Vector2( 0.445573, 0.446339 )
texture = ExtResource( 1 )

[node name="play" type="TouchScreenButton" parent="."]
position = Vector2( 452.766, 88.2941 )
shape = SubResource( 1 )

[node name="settings" type="TouchScreenButton" parent="."]
position = Vector2( 452.766, 180.294 )
shape = SubResource( 1 )

[node name="quit" type="TouchScreenButton" parent="."]
position = Vector2( 452.766, 274.294 )
shape = SubResource( 1 )

[connection signal="released" from="play" to="." method="_on_play_released"]
[connection signal="released" from="settings" to="." method="_on_settings_released"]
[connection signal="released" from="quit" to="." method="_on_quit_released"]
